kubernetes/apps/habitica/base/mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  labels: 
    name: mongodb
spec: 
  containers: 
      image: mongo
      name: mongodb
      ports: 
        - containerPort: 27017
          hostPort: 27017
          name: mongo
      volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
  volumes:
    - name: mongo-persistent-storage
      persistentVolumeClaim:
        claimName: mongo-pvc
