kubernetes/apps/habitica/base/habitica-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habitica-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: habitica-client
  template:
    metadata:
      labels:
        app: habitica-client
    spec:
      containers:        
      - name: habitica-client
        image: ghcr.io/thomascardin/habitica:5.24.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args: ["npm run client:dev"]

---
apiVersion: v1
kind: Service
metadata:
  name: habitica-client
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: habitica-client
  type: ClusterIP
