kubernetes/apps/habitica/base/habitica-service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    name: habiticaweb
  name: habiticaweb
spec: 
  ports:
    - port: 3000
  selector: 
    name: habitica
  type: ClusterIP
