kubernetes/apps/habitica/base/mongo-service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    name: mongosvc
  name: mongosvc
spec: 
  ports:
    - port: 27017
  selector: 
    name: mongodb
