kubernetes/apps/habitica/base/habitica-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httproute-external-habitica
  namespace: habitica
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  hostnames:
    - "habitica.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: habitica-client
      port: 8080
